--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Project X
 email: rmit.projectx@gmail.com
-baseurl: "Assignment-Two" # the subpath of your site, e.g. /blog
+baseurl: "Assignment-Three" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
