Setting the base URL to projectx.group

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@
 
 title: Project X
 email: rmit.projectx@gmail.com
-baseurl: "/Assignment-Three" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://projectx.group" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
