setting protocol to https

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Project X
 email: rmit.projectx@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://projectx.group" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://projectx.group" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
